force-app/main/default/objects/FieloEE__Rule__c/FieloEE__Rule__c.object-meta.xml
<CustomObject>
    <description>Rules that determine the points a member earns with a transaction.</description>
    <label>Rule</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>