force-app/main/default/objects/FieloEE__Rule__c/fields/FieloEE__Description__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Description__c</fullName>
    <description>A description of this rule.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter a description for this rule.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>