force-app/main/default/objects/FieloEE__Rule__c/fields/FieloEE__FieldNameReward__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__FieldNameReward__c</fullName>
    <defaultValue>&quot;Value__c&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Field Name Reward</label>
    <length>80</length>
    <type>Text</type>
</CustomField>