force-app/main/default/objects/FieloEE__Rule__c/fields/FieloEE__Type__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Type__c</fullName>
    <description>The type of this rule, which decides when the rule is applied.</description>
    <inlineHelpText>Choose when to use the given rule. &quot;Best Option&quot;: Among applicable rules,  the best option will be chosen. &quot;No Competition&quot;: This rule will always be applied.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Best Option</fullName>
                <default>true</default>
                <label>Best Option</label>
            </value>
            <value>
                <fullName>No Competition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>