force-app/main/default/objects/FieloEE__Rule__c/validationRules/FieloEE__Validate_points_value.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__Validate_points_value</fullName>
    <active>true</active>
    <errorConditionFormula>AND( OR( ISPICKVAL(FieloEE__ConvertionTypeTransaction__c,&apos;Fix Value&apos;), ISPICKVAL(FieloEE__ConvertionTypeTransaction__c,&apos;Factor&apos;), ISPICKVAL(FieloEE__ConvertionTypeTransaction__c,&apos;Multiplier&apos;) ), OR(FieloEE__ConvertionValue__c == 0, ISNULL(FieloEE__ConvertionValue__c), ISBLANK(FieloEE__ConvertionValue__c)) )</errorConditionFormula>
    <errorMessage>The quantity of points cannot be empty or be 0</errorMessage>
</ValidationRule>